Fix alignment of next & prev links

--- a/resources/sass/_blog.scss
+++ b/resources/sass/_blog.scss
@@ -81,9 +81,10 @@
   > * {
     @include display-block;
     @include space-inside;
+    flex-grow: 1;
 
     > * {
-      @include display-inline-block;
+      @include display-block;
     }
   }
 
